--- a/build.gradle
+++ b/build.gradle
@@ -56,3 +56,10 @@ dependencies {
     implementation "com.android.support:transition:${supportLibVersion}"
 }
 
+allprojects {
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs.add('-Xbootclasspath/p:system_libs/framework.jar')
+        }
+    }
+}
