fix: crash when removing old overlays

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,10 +46,11 @@
 
         <activity
             android:name=".ThemePreview"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar" />
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"/>
         <activity
             android:name=".MainActivity"
-            android:theme="@android:style/Theme.DeviceDefault.Light">
+            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
