--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,8 +20,12 @@
     package="org.exthmui.theme"
     android:sharedUserId="android.uid.system">
 
-    <permission android:protectionLevel="normal" android:name="exthmui.permission.READ_THEME_DATA"></permission>
-    <permission android:protectionLevel="signature" android:name="exthmui.permission.MANAGE_THEME"></permission>
+    <permission
+        android:protectionLevel="normal"
+        android:name="exthmui.permission.READ_THEME_DATA" />
+    <permission
+        android:protectionLevel="signature"
+        android:name="exthmui.permission.MANAGE_THEME" />
 
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -30,7 +34,7 @@
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true">
