--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion '28.0.0'
 
     defaultConfig {
         applicationId "org.exthmui.theme"
-        minSdkVersion 28
-        targetSdkVersion 28
+        minSdkVersion 29
+        targetSdkVersion 29
         multiDexEnabled = true
     }
 
@@ -67,6 +67,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.transition:transition:1.0.0'
+    implementation "androidx.preference:preference:1.1.0"
 }
 
 allprojects {
