ThemeManager: [tmp] new UI

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ android {
         applicationId "org.exthmui.theme"
         minSdkVersion 29
         targetSdkVersion 29
+        versionCode 26666
         multiDexEnabled = true
     }
 
@@ -50,7 +51,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    
+
     signingConfigs {
         debug {
             keyAlias keystoreProperties['keyAlias']
